# D3D12Engine

./: .gitignore  .gitmodules  CMakeLists.txt  D3D12Engine.slnx  D3D12Engine.vcxproj  D3D12Engine.vcxproj.filters  README.md  packages.config
Assets/Shaders/: color.hlsl  light.hlsl  texture.hlsl
libs/: CMakeLists.txt
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  D3D11API.cpp  D3D11API.h  D3D12API.cpp  D3D12API.h  InputSystem.cpp  InputSystem.h  Light.cpp  Light.h  System.h  Texture.cpp  Texture.h  Timer.h  Window.cpp  Window.h  main.cpp  pch.hpp
src/Models/: Cube.cpp  Cube.h  CubeData.h  Model.cpp  Model.h
src/Shaders/: ColorShader.cpp  ColorShader.h  LightShader.cpp  LightShader.h  Shader.cpp  Shader.h  TextureShader.cpp  TextureShader.h  pch.hpp
src/Utils/: Error.h
